# SSA

./: .gitignore  CMakeLists.txt
Lab1/: dnasearch.cpp  filesearch.cpp  main.cpp  testsearch.cpp
Lab1/logic/: blocksearch.h  bordersearch.h  glue.h
Lab1/modules/: blocksearch.h  borderarray.h  bordersearch.h
Lab1/test/: test.h
Lab1/testing/: test.h
Lab2/: dnasearch.cpp  filesearch.cpp  main.cpp  testsearch.cpp
Lab2/logic/: kmpsearch.h  mbabuilder.h
Lab2/test/: test.h
Lab2/testing/: test.h
Lab3/: main.cpp
Lab3/logic/: basic.h  bmbasic.h  bmsearch.h
Lab3/testing/: test.h
Lab4/logic/: krsearch.h
Lab4/testing/: test.h
Lab5/: main.cpp
Lab5/logic/: shiftsearch.h
Lab5/testing/: test.h
libs/: dnagenerator.h  filereader.h  generators.h  testgenerator.h
